crates/toml/tests/snapshots/invalid/ext/datetime/month-1digit.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-9-09
  |       ^^^^^^^^^
invalid date, expected a two-digit month (MM)
